RESOLVED FIXED220235
[WASM-References] Fix data section parsing and add more tests from ref-types
https://bugs.webkit.org/show_bug.cgi?id=220235
Summary [WASM-References] Fix data section parsing and add more tests from ref-types
Dmitry
Reported 2021-01-04 02:48:18 PST
[WASM-References] Fix data section parsing and add more tests from ref-types
Attachments
Patch (400.79 KB, patch)
2021-01-04 02:55 PST, Dmitry
no flags
Patch (400.68 KB, patch)
2021-01-04 20:11 PST, Dmitry
no flags
Dmitry
Comment 1 2021-01-04 02:55:13 PST
Yusuke Suzuki
Comment 2 2021-01-04 10:04:40 PST
Comment on attachment 416931 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416931&action=review r=me with comment. > Source/JavaScriptCore/wasm/WasmSectionParser.cpp:747 > + const char* errorMessage = Options::useWebAssemblyReferences() ? "th Data segment's flag" : "th Data segment's index"; I think we should just throw an error with `"th Data segment's flag"`.
Dmitry
Comment 3 2021-01-04 20:11:20 PST
EWS
Comment 4 2021-01-04 21:02:02 PST
Committed r271141: <https://trac.webkit.org/changeset/271141> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416971 [details].
Radar WebKit Bug Importer
Comment 5 2021-01-04 21:03:16 PST
Note You need to log in before you can comment on or make changes to this bug.