[WASM-References] Fix data section parsing and add more tests from ref-types https://bugs.webkit.org/show_bug.cgi?id=220235

Patch by Dmitry Bezhetskov <dbezhetskov@igalia.com> on 2021-01-04
Reviewed by Yusuke Suzuki.

JSTests:

Add more tests from ref-types spec.

* wasm.yaml:
* wasm/references-spec-tests/binary-leb128.wast.js: Added.
* wasm/references-spec-tests/binary.wast.js: Added.
* wasm/references-spec-tests/br_table.wast.js: Added.
* wasm/references-spec-tests/call_indirect.wast.js: Added.
* wasm/references-spec-tests/custom.wast.js: Added.
* wasm/references-spec-tests/data.wast.js: Added.
* wasm/references-spec-tests/exports.wast.js: Added.
* wasm/references-spec-tests/global.wast.js: Added.
* wasm/references-spec-tests/imports.wast.js: Added.
* wasm/references-spec-tests/memory_grow.wast.js: Added.
* wasm/references-spec-tests/table.wast.js: Added.

Source/JavaScriptCore:

We should read leb128 unsigned integer instead of just one byte for
Data entry flag.

* wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseData):

Canonical link: https://commits.webkit.org/232738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271141 268f45cc-cd09-0410-ab3c-d52691b4dbfc